# appium-test-suite

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
alduin/: README.md  __init__.py  appium_config.py  constants.py  device.py  exceptions.py  item.py  logger.py  pyproject.toml  utils.py
alduin/alduin/: __init__.py  appium_config.py  driver.py  element.py
alduin/tests/: test.py
test/: notebook.ipynb  service.py  usage.py
